test/neg/neg-rpc5.errc
rpc return values must be Serializable
